# portaudio

./: CMakeLists.txt  README.txt  pa_config.h.in  portaudio.def.in
examples/: CMakeLists.txt
include/: portaudio.h
qa/: CMakeLists.txt
qa/loopback/: CMakeLists.txt
src/hostapi/wasapi/: pa_win_wasapi.c
src/hostapi/wdmks/: pa_win_wdmks.c
src/hostapi/wmme/: pa_win_wmme.c
src/os/win/: pa_win_hostapis.c  pa_win_wdmks_utils.c
test/: CMakeLists.txt
